@@ -45,6 +45,15 @@ android {
     lint {
         warning 'InvalidPackage'
     }
+    // java 17 mockito issue: https://stackoverflow.com/questions/68113065/mockito-inaccessible-object-exception-while-creating-a-mock-object
+    // something up with gson lol
+    // TODO: if we change mockito libs/update or swap out GSON, test with this removed
+    testOptions {
+        unitTests.all {
+            jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED'
+        }
+    }
+
     namespace 'rectangledbmi.com.pittsburghrealtimetracker'
 }
 
